# tasty_int

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
benchmark/: CMakeLists.txt
benchmark/src/: CMakeLists.txt
cmake/Unity/: CMakeLists.txt
cmake/unity_test/: CMakeLists.txt  gitignore_patches
docs/: CMakeLists.txt  Doxyfile
src/: CMakeLists.txt  CMakeLists.txt.orig
src/tasty_int/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  tasty_int.cpp  tasty_int_token_values.cpp
src/tasty_int/cmake/: TastyIntConfig.cmake.in
src/tasty_int/configure/: CMakeLists.txt
src/tasty_int/configure/src/: CMakeLists.txt  generate_tasty_int_token_values_file.cpp
src/tasty_int/detail/: CMakeLists.txt  absolute_value_from_arithmetic.hpp  base_36_token_from_value.cpp  base_36_token_from_value.hpp  base_64_token_from_value.cpp  base_64_token_from_value.hpp  base_prefix_from_string.cpp  base_prefix_from_string.hpp  concepts.hpp  count_leading_zero_bits.cpp  count_leading_zero_bits.hpp  digit_from_nonnegative_value.hpp  digits_addition.cpp  digits_addition.hpp  digits_bitwise.cpp  digits_bitwise.hpp  digits_comparison.cpp  digits_comparison.hpp  digits_comparison_operators.cpp  digits_comparison_operators.hpp  digits_division.cpp  digits_division.hpp  digits_from_floating_point.cpp  digits_from_floating_point.hpp  digits_from_integral.cpp  digits_from_integral.hpp  digits_from_string.cpp  digits_from_string.hpp  digits_multiplication.cpp  digits_multiplication.hpp  digits_subtraction.cpp  digits_subtraction.hpp  ensure_base_is_supported.cpp  ensure_base_is_supported.hpp  extended_digit_accumulator.cpp  extended_digit_accumulator.hpp  flip_sign.hpp  floating_point_digits_iterator.hpp  int_from_floating_point.cpp  int_from_floating_point.hpp  (+50 more)
src/tasty_int/detail/benchmark/: CMakeLists.txt  digits_benchmark.hpp  digits_bitwise_benchmark.cpp  digits_division_benchmark.cpp  digits_multiplication_benchmark.cpp  extended_digit_accumulator_benchmark.cpp  sign_benchmark.cpp
src/tasty_int/detail/code_generator/: CMakeLists.txt  generate_base_36_token_table.cpp  generate_base_64_token_table.cpp  generate_digits_per_token_table.cpp  generate_table_files.cpp  generate_table_files.hpp  generate_token_table.cpp  generate_token_table.hpp  parse_code_generator_arguments.cpp  parse_code_generator_arguments.hpp  table_generator.cpp  table_generator.hpp  token_table_generator.cpp  token_table_generator.hpp
src/tasty_int/detail/comparisons/: CMakeLists.txt  digits_comparison_operators.cpp  digits_comparison_operators.hpp
src/tasty_int/detail/conversions/: CMakeLists.txt  base_36_token_from_value.cpp  base_36_token_from_value.hpp  base_64_token_from_value.cpp  base_64_token_from_value.hpp  base_prefix_format_from_ios_format.cpp  base_prefix_format_from_ios_format.hpp  base_prefix_from_string.cpp  base_prefix_from_string.hpp  base_prefix_length_from_string.cpp  base_prefix_length_from_string.hpp  digit_from_nonnegative_value.hpp  digits_from_floating_point.cpp  digits_from_floating_point.hpp  digits_from_integral.cpp  digits_from_integral.hpp  digits_from_string.cpp  digits_from_string.hpp  ensure_base_is_supported.cpp  ensure_base_is_supported.hpp  floating_point_from_digits.cpp  floating_point_from_digits.hpp  floating_point_from_integer.cpp  integer_from_floating_point.cpp  integer_from_signed_integral.cpp  integer_from_string.cpp  integer_from_unsigned_integral.cpp  integral_from_digits.cpp  integral_from_digits.hpp  sign_from_signed_arithmetic.hpp  sign_from_unsigned_arithmetic.hpp  signed_integral_from_integer.cpp  string_from_integer.cpp  token_table.hpp  token_values_from_digits.cpp  token_values_from_digits.hpp  unsigned_integral_from_integer.cpp  value_from_base_36_token.cpp  value_from_base_36_token.hpp  value_from_base_64_token.cpp  (+1 more)
src/tasty_int/detail/test/: CMakeLists.txt  absolute_value_from_arithmetic_test.cpp  base_36_token_from_value_test.cpp  base_64_token_from_value_test.cpp  base_prefix_from_string_test.cpp  base_support_test_common.hpp  binary_digits_operation_test_common.hpp  comparison_test_common.hpp  count_leading_zero_bits_test.cpp  digit_accumulator_operations_test.cpp  digit_from_nonnegative_value_test.cpp  digit_type_test.cpp  digits_addition_test.cpp  digits_bitwise_test.cpp  digits_comparison_operators_test.cpp  digits_comparison_test.cpp  digits_division_test.cpp  digits_from_floating_point_test.cpp  digits_from_integral_test.cpp  digits_from_string_test.cpp  digits_from_user_type_integration_test.cpp  digits_multiplication_test.cpp  digits_subtraction_arithmetic_integration_test.cpp  digits_subtraction_test.cpp  ensure_base_is_supported_test.cpp  extended_digit_accumulator_test.cpp  flip_sign_test.cpp  (+59 more)
src/tasty_int/test/: CMakeLists.txt  tasty_int_addition_test.cpp  tasty_int_arithmetic_test_common.hpp  tasty_int_comparison_test.cpp  tasty_int_constructors_test.cpp  tasty_int_conversion_test.cpp  tasty_int_division_test.cpp  tasty_int_multiplication_test.cpp  tasty_int_prepare_operand_test.cpp  tasty_int_subtraction_test.cpp  tasty_int_unary_operations_test.cpp  test_catch_test.cpp  test_tasty_int.cpp  test_tasty_int.cpp.orig  test_tasty_int_constructors.cpp  test_unity_test.c
src/tasty_int_demo/: CMakeLists.txt  tasty_int_demo.cpp
test/: CMakeLists.txt
test/include/: .gitignore
test/include/tasty_int_test/: approximately_equal.hpp  arithmetic_types.hpp  base_10_integer_string_from_arithmetic.hpp  cartesian_product.hpp  check_integer_result.hpp  combine_types.hpp  comparison_tests.hpp  expect_approx.hpp  floating_point_integral_limits.hpp  floating_point_types.hpp  integral_types.hpp  logarithmic_range.hpp  logarithmic_range_values.hpp  make_arithmetic_printable.hpp  non_boolean_arithmetic_types.hpp  nonnegative_arithmetic_values.hpp  sample_arithmetic.hpp  signed_arithmetic_types.hpp  signed_integral_types.hpp  unsigned_arithmetic_types.hpp
test/script/: .gitignore
test/src/: .gitignore  CMakeLists.txt
test/src/tasty_int_test/: CMakeLists.txt
test/src/tmp/: Unity-cfgcmd.txt  Unity-gitclone.cmake  Unity-gitupdate.cmake
(+208 files in other folders)
